# npi_library_rs

./: .env  .gitignore  Cargo.toml  build.rs  docker-compose.yml  rest  test.html  test.sh
backend/: .env  Cargo.toml  docker-compose.yml  rest
backend/migrations/: 0001_user_table.sql
backend/src/: auth.rs  config.rs  error.rs
backend/src/database/: connection.rs  models.rs
backend/src/models/: request.rs
backend/src/office_utils/: doc_manager.rs  file_utils.rs  hist_manager.rs  models.rs  service_converter.rs  track_manager.rs
backend/src/scopes/: mod.rs
backend/src/scopes/office/: routes.rs
backend/src/scopes/user/: routes.rs
frontend/: package-lock.json  package.json
frontend/src/: book.js  hooks.client.js
frontend/src/components/: Book.svelte  BookEdit.svelte  navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/books/: +page.svelte
frontend/src/routes/create_book/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/stores/: auth.js  book_store.js  token_store.js
migrations/: 0001_user_table.sql
migrations/2023-05-05-171753_user_table/: down.sql  up.sql
src/: auth.rs  config.rs  error.rs  main.rs  schema.rs
src/database/: connection.rs  models.rs
src/models/: request.rs  response.rs  user.rs
src/office_utils/: doc_manager.rs  file_utils.rs  hist_manager.rs  mod.rs  models.rs  service_converter.rs  track_manager.rs
src/repositories/user_repository/: routes.rs
src/scopes/office/: routes.rs
src/scopes/user/: routes.rs
thunder-tests/: thunderActivity.json
(+5 files in other folders)
