[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix", "runtime-actix-rustls", "migrate", "macros"] }
