[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
argon2 = "0.5.0"
bytes = "1.4.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.17"
mime = "0.3.17"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["stream", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix", "runtime-actix-rustls", "migrate", "macros"] }
tokio = { version = "1.28.0", features = ["rt", "macros"] }
tokio-util = { version = "0.7.8", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
xxhash-rust = { version = "0.8.6", features = ["xxh64", "xxh3"] }
